--- a/.screenrc
+++ b/.screenrc
@@ -2,9 +2,6 @@
 # Ian's screen configuration
 #
 
-# use ^T instead of ^A as the command key
-escape ^Tt
-
 defscrollback 2000
 autodetach on
 startup_message off
@@ -17,23 +14,7 @@ bell_msg ""
 msgwait 1
 msgminwait 1
 
-# 12-hour time
-#hardstatus alwayslastline "%{k}%-w%{.kY}%n %t%{-}%+w %= %H: %l %d/%m %C%a"
-# 24-hour time
-hardstatus alwayslastline "%{k}%-w%{.kY}%n %t%{-}%+w %= %H: %l %d/%m %c"
+hardstatus alwayslastline "%{=kd}%-w%{.kB}%n %t%{-}%+w %= %H: %l %d/%m %C%a"
 
-# When splitting windows, set the inactive splits' captions background to grey.
-# (Replace the 'K' with another color or Remove the '%:' if you want to reverse the logic.)
-caption string '%?%F%:%{.K.}%?%3n %t%?%?'
-
-bind ^J focus
-bind j focus down
-bind k focus up
-bind g focus top
-bind G focus bottom
-bind E hardstatus ignore
-bind e hardstatus alwayslastline
-
-#termcap  xterm|dtterm|rxvt|fptwist hs@:cs=\E[%i%d;%dr:im=\E[6h:ei=\E[4l
-#terminfo xterm|dtterm|rxvt|fptwist hs@:cs=\E[%i%p1%d;%p2%dr:im=\E[4h:ei=\E[4l
-
+bind 'E' hardstatus ignore
+bind 'e' hardstatus alwayslastline
