--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g bell-action none
 set -g visual-bell off
 set -g display-panes-time 2000
 
-bind "C-d" attach
+bind "C-d" detach
 bind "C-t" last-window
 
 # Colors
