Updated thmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,16 +11,18 @@ bind "C-d" detach
 bind "C-t" last-window
 
 # Colors
-set -g status-bg white
-set -g status-fg black
-set -g pane-border-bg black
+set -g pane-border-bg default
 set -g pane-border-fg black
-set -g pane-active-border-bg white
-set -g pane-active-border-fg white
-setw -g window-status-bg white
-setw -g window-status-fg black
+set -g pane-active-border-bg default
+set -g pane-active-border-fg blue
+set -g status-bg black
+set -g status-fg white
+setw -g window-status-bg black
+setw -g window-status-fg white
+setw -g window-status-attr none
 setw -g window-status-current-bg blue
 setw -g window-status-current-fg black
+setw -g window-status-current-attr none
 
 # Vim-like bindings
 bind "n" next-window
