--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,7 @@ setw -g window-status-current-fg black
 setw -g window-status-current-attr none
 
 # Vim-like bindings
+setw -g mode-keys vi
 bind "n" next-window
 bind "p" previous-window
 bind "s" split-window -v
