Ooops, real nethackrc changes in now

--- a/.nethackrc
+++ b/.nethackrc
@@ -1,10 +1,10 @@
 OPTIONS=name:Ian,role:valkyrie,race:dwarf,align:lawful
 
 OPTIONS=pettype:cat,catname:Snowball,dogname:Santas Little Helper,horsename:Princess,fruit:kumquat
-OPTIONS=msghistory:2000,!legacy,!autopickup,pushweapon,runmode:walk
+OPTIONS=msghistory:2000,!legacy,pushweapon,runmode:walk
 OPTIONS=autodig
 
 OPTIONS=color
 #OPTIONS=IBMgraphics
 
-#OPTIONS=autopickup,pickuptypes:$
+OPTIONS=autopickup,pickup_types:$
