--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "/Users/ian/.dotfiles/.vim/bundle/command-t"]
 	path = /Users/ian/.dotfiles/.vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
+[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-coffee-script"]
+	path = /Users/ian/.dotfiles/.vim/bundle/vim-coffee-script
+	url = https://github.com/kchmck/vim-coffee-script.git
