--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "/Users/ian/.dotfiles/.vim/bundle/vim-coffee-script"]
 	path = /Users/ian/.dotfiles/.vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "/Users/ian/.dotfiles/.vim/bundle/snipmate.vim"]
+	path = /Users/ian/.dotfiles/.vim/bundle/snipmate.vim
+	url = https://github.com/msanders/snipmate.vim.git
