--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,39 @@
 [submodule ".vim/bundle/vim-pathogen"]
 	path = .vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-pathogen"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-colors-solarized"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-colors-solarized
+[submodule ".vim/bundle/vim-colors-solarized"]
+	path = .vim/bundle/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/moria"]
-	path = /Users/ian/.dotfiles/.vim/bundle/moria
+[submodule ".vim/bundle/moria"]
+	path = .vim/bundle/moria
 	url = https://github.com/vim-scripts/moria.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/ZenCoding.vim"]
-	path = /Users/ian/.dotfiles/.vim/bundle/ZenCoding.vim
+[submodule ".vim/bundle/ZenCoding.vim"]
+	path = .vim/bundle/ZenCoding.vim
 	url = https://github.com/vim-scripts/ZenCoding.vim.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/nerdtree"]
-	path = /Users/ian/.dotfiles/.vim/bundle/nerdtree
+[submodule ".vim/bundle/nerdtree"]
+	path = .vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-fugitive"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-fugitive
+[submodule ".vim/bundle/vim-fugitive"]
+	path = .vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-haml"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-haml
+[submodule ".vim/bundle/vim-haml"]
+	path = .vim/bundle/vim-haml
 	url = https://github.com/tpope/vim-haml.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-surround"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-surround
+[submodule ".vim/bundle/vim-surround"]
+	path = .vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-markdown"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-markdown
+[submodule ".vim/bundle/vim-markdown"]
+	path = .vim/bundle/vim-markdown
 	url = https://github.com/tpope/vim-markdown.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/command-t"]
-	path = /Users/ian/.dotfiles/.vim/bundle/command-t
+[submodule ".vim/bundle/command-t"]
+	path = .vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/vim-coffee-script"]
-	path = /Users/ian/.dotfiles/.vim/bundle/vim-coffee-script
+[submodule ".vim/bundle/vim-coffee-script"]
+	path = .vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "/Users/ian/.dotfiles/.vim/bundle/snipmate.vim"]
-	path = /Users/ian/.dotfiles/.vim/bundle/snipmate.vim
+[submodule ".vim/bundle/snipmate.vim"]
+	path = .vim/bundle/snipmate.vim
 	url = https://github.com/msanders/snipmate.vim.git
+[submodule ".vim/bundle/Railscasts-Theme-GUIand256color"]
+	path = .vim/bundle/Railscasts-Theme-GUIand256color
+	url = https://github.com/vim-scripts/Railscasts-Theme-GUIand256color.git
