--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule ".vim/bundle/oceandeep"]
+	path = .vim/bundle/oceandeep
+	url = https://github.com/vim-scripts/oceandeep.git
