--- a/.ackrc
+++ b/.ackrc
@@ -14,6 +14,7 @@
 --group
 
 # Custom types and abbreviatinos.
+--type-set=slim=.slim
 --type-set=py=.py
 --type-set=sass=.sass
 --type-set=coffee=.coffee
