--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,10 @@ set -g display-panes-time 2000
 bind "C-d" detach
 bind "C-t" last-window
 
+# Join pane command - https://unix.stackexchange.com/a/14301/16225
+bind "C-j" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+
 # Colors
 set -g pane-border-bg default
 set -g pane-border-fg black
