Check in tmux-themepack for now

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,18 +16,7 @@ bind "C-j" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Colors
-set -g pane-border-bg default
-set -g pane-border-fg black
-set -g pane-active-border-bg default
-set -g pane-active-border-fg blue
-set -g status-bg black
-set -g status-fg white
-setw -g window-status-bg black
-setw -g window-status-fg white
-setw -g window-status-attr none
-setw -g window-status-current-bg blue
-setw -g window-status-current-fg black
-setw -g window-status-current-attr none
+source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
 
 # Vim-like bindings
 setw -g mode-keys vi
