further tmux tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,8 +58,8 @@ set -g status-left ""
 set -g status-right ""
 
 # Window status
-set -g window-status-format " #I:#W#F "
-set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour81,nobold] #I:#W#F #[fg=black,bg=colour233,nobold]"
+set -g window-status-format " 〈#I〉#W "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour81,nobold] 〈#I〉#W #[fg=black,bg=colour233,nobold]"
 
 # Current window status
 set -g window-status-current-bg colour39
@@ -73,7 +73,7 @@ set -g window-status-activity-fg colour233 # a bug in tmux
 set -g window-status-separator ""
 
 # Window status alignment
-set -g status-justify left
+set -g status-justify centre
 
 # Pane border
 set -g pane-border-bg default
