--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,8 +37,8 @@ bind "Escape" copy-mode
 set -g status-interval 0
 set -g status-fg colour240
 set -g status-bg colour233
-set -g status-left ""
-set -g status-right ""
+set -g status-left "#[fg=colour242] #{host} "
+set -g status-right "#[fg=colour242] #{session_name}:#{window_index}.#{pane_index} "
 set -g window-status-format " 〈#I〉#W "
 set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour81,nobold] 〈#I〉#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-current-bg colour39
