Enable repeats for moving around tmux panes while holding control

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,19 +12,25 @@ bind "C-d" detach
 bind "C-t" last-window
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
-bind "C-j" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
-bind "n" next-window
-bind "p" previous-window
+bind -r "n" next-window
+bind -r "p" previous-window
+bind -r "C-n" next-window
+bind -r "C-p" previous-window
 bind "s" split-window -v
 bind "v" split-window -h
 bind "j" select-pane -D
 bind "k" select-pane -U
 bind "h" select-pane -L
 bind "l" select-pane -R
+bind -r "C-j" select-pane -D
+bind -r "C-k" select-pane -U
+bind -r "C-h" select-pane -L
+bind -r "C-l" select-pane -R
 bind "=" select-layout tiled
 bind "!" break-pane
 
