Enable mouse in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 # Ian's .tmux.conf
+#
+# Note for OSX & iTerm: Enable "Applications in terminal may access clipboard" setting in prefs.
+#
 
+# Use T as the leader key, not B
 unbind "C-b"
 set -g prefix "C-t"
 bind "t" send-prefix
@@ -7,6 +11,7 @@ bind "t" send-prefix
 set -g bell-action none
 set -g visual-bell off
 set -g display-panes-time 2000
+set -g mouse on
 
 bind "C-d" detach
 bind "C-t" last-window
