OSX clipboard fixing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,16 @@ bind '"' choose-window
 bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
 
+# OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+unbind-key -T copy-mode-vi M-w
+bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
+
+# Double clicking selects the word also when not in copy-mode.
+bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
+
 # Colors - derived from Powerline Double Cyan by Jim Myhrberg
 set -g status-interval 0
 set -g status-fg colour240
