tmux theme tweak

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,7 +60,7 @@ set -g status-fg colour240
 set -g status-bg colour233
 set -g status-left "#[fg=colour242] #{host} "
 set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
-set -g window-status-format "#[bg=colour233,fg=colour240] 〈#I〉#W "
+set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
 set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] 《#I》#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-current-bg colour39
 set -g window-status-current-fg colour235
