--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.DS_Store
-.ropeproject
 *.pyc
+*_flymake.*
 *~
 .#*
+.DS_Store
+.gvimlocal
+.postinstall
+.ropeproject
 .unison.*.unison.tmp-bad
-*_flymake.*
 .vim/bundle/*/doc/tags
 .vim/bundle/*/doc/tags-??
+.vimlocal
