tmux conf fixes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,10 +22,10 @@ bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
-bind -r "n" next-window
-bind -r "p" previous-window
-bind -r "C-n" next-window
-bind -r "C-p" previous-window
+bind "n" next-window
+bind "p" previous-window
+bind "C-n" next-window
+bind "C-p" previous-window
 bind "s" split-window -v
 bind "v" split-window -h
 bind "j" select-pane -D
