The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,10 +45,10 @@ bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
 
 # OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.
 unbind-key -T copy-mode-vi M-w
-bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 
 # Double clicking selects the word also when not in copy-mode.
