bind ; to choose-tree

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,7 @@ bind -r "C-h" select-pane -L
 bind -r "C-l" select-pane -R
 bind "=" select-layout tiled
 bind "!" break-pane
+bind \; choose-tree
 
 # Screen-like bindings
 bind '"' choose-window
