Use Tmux Plugin Manager and some plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,8 @@ bind "C-d" detach
 bind "C-t" last-window
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
-bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
-bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+# bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+# bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
@@ -44,13 +44,6 @@ bind \; choose-tree
 bind '"' choose-window
 bind "A" command-prompt "rename-window '%%'"
 bind "Escape" copy-mode
-
-# OSX clipboard fixes - https://gist.github.com/algesten/0ba2d7c19763db6a7396126e8526b65b
-# The `reattach-to-user-namespace` command is no longer needed as of tmux-2.6.
-unbind-key -T copy-mode-vi M-w
-bind-key -T copy-mode-vi C-w send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 
 # Double clicking selects the word also when not in copy-mode.
 bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
@@ -83,3 +76,18 @@ set -g message-command-bg colour233
 set -g message-command-fg black
 set -g mode-bg colour39
 set -g mode-fg colour232
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
