Brighten up Nord comments (via https://github.com/arcticicestudio/nord-visual-studio-code/issues/14)

--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -1,45 +1,50 @@
 {
-    "editor.fontFamily": "Iosevka",
-    "editor.fontLigatures": true,
-    "editor.fontSize": 16,
-    "workbench.iconTheme": "material-icon-theme",
-    "editor.quickSuggestions": {
-        "other": true,
-        "comments": true,
-        "strings": true
-    },
-    "jest.restartJestOnSnapshotUpdate": true,
-    "markdown.preview.fontSize": 16,
-    "explorer.confirmDragAndDrop": false,
-    "typescript.updateImportsOnFileMove.enabled": "always",
-    "editor.formatOnSave": true,
-    "git.autofetch": true,
-    "git.enableSmartCommit": true,
-    "explorer.confirmDelete": false,
-    "editor.minimap.enabled": false,
-    "editor.minimap.renderCharacters": false,
-    "editor.tabSize": 2,
-    "window.zoomLevel": 0,
-    "files.useExperimentalFileWatcher": true,
-    "editor.lineNumbers": "off",
-    "editor.cursorBlinking": "solid",
-    "scm.diffDecorationsGutterWidth": 2,
-    "editor.glyphMargin": false,
-    "vim.leader": ",",
-    "jest.enableInlineErrorMessages": false,
-    "workbench.statusBar.visible": true,
-    "workbench.activityBar.visible": true,
-    "vim.foldfix": true,
-    "workbench.colorTheme": "Nord",
-    "editor.renderIndentGuides": false,
-    "editor.lineHeight": 20,
-    "terminal.integrated.fontSize": 16,
-    "search.exclude": {
-        "**/*.js.snap": true,
-        "**/*.ts.snap": true,
-        "**/yaml.lock": true
-    },
-    "editor.parameterHints.enabled": false,
-    "editor.tabCompletion": "on",
-    "editor.suggest.localityBonus": true
+  "editor.fontFamily": "Iosevka",
+  "editor.fontLigatures": true,
+  "editor.fontSize": 16,
+  "workbench.iconTheme": "material-icon-theme",
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": true,
+    "strings": true
+  },
+  "jest.restartJestOnSnapshotUpdate": true,
+  "markdown.preview.fontSize": 16,
+  "explorer.confirmDragAndDrop": false,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "editor.formatOnSave": true,
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+  "explorer.confirmDelete": false,
+  "editor.minimap.enabled": false,
+  "editor.minimap.renderCharacters": false,
+  "editor.tabSize": 2,
+  "window.zoomLevel": 0,
+  "files.useExperimentalFileWatcher": true,
+  "editor.lineNumbers": "off",
+  "editor.cursorBlinking": "solid",
+  "scm.diffDecorationsGutterWidth": 2,
+  "editor.glyphMargin": false,
+  "vim.leader": ",",
+  "jest.enableInlineErrorMessages": false,
+  "workbench.statusBar.visible": true,
+  "workbench.activityBar.visible": true,
+  "vim.foldfix": true,
+  "workbench.colorTheme": "Nord",
+  "editor.renderIndentGuides": false,
+  "editor.lineHeight": 20,
+  "terminal.integrated.fontSize": 16,
+  "search.exclude": {
+    "**/*.js.snap": true,
+    "**/*.ts.snap": true,
+    "**/yaml.lock": true
+  },
+  "editor.parameterHints.enabled": false,
+  "editor.tabCompletion": "on",
+  "editor.suggest.localityBonus": true,
+  "editor.tokenColorCustomizations": {
+    "[Nord]": {
+      "comments": "#7b88a1"
+    }
+  }
 }
