--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X sele
 set -g status-interval 0
 set -g status-fg colour240
 set -g status-bg colour233
-set -g status-left "#[fg=colour242] #{host} "
+set -g status-left "#[fg=colour242] #(uname -n | cut -d. -f1) "
 set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
 set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
 set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] 《#I》#W #[fg=black,bg=colour233,nobold]"
