--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -1,66 +1,88 @@
 {
+  "breadcrumbs.enabled": true,
+  "editor.acceptSuggestionOnCommitCharacter": false,
+  "editor.acceptSuggestionOnEnter": "smart",
+  "editor.cursorBlinking": "solid",
   "editor.fontFamily": "Iosevka",
   "editor.fontLigatures": true,
   "editor.fontSize": 16,
-  "workbench.iconTheme": "material-icon-theme",
+  "editor.formatOnSave": true,
+  "editor.glyphMargin": false,
+  "editor.lineHeight": 20,
+  "editor.lineNumbers": "off",
+  "editor.minimap.enabled": false,
+  "editor.minimap.renderCharacters": false,
+  "editor.parameterHints.enabled": false,
   "editor.quickSuggestions": {
     "other": true,
     "comments": true,
     "strings": true
   },
+  "editor.renderIndentGuides": false,
+  "editor.renderWhitespace": "none",
+  "editor.suggest.localityBonus": true,
+  "editor.tabCompletion": "on",
+  "editor.tabSize": 2,
+  "editor.tokenColorCustomizations": { "[Nord]": { "comments": "#616e88" } },
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "files.exclude": { "**/.next": true, "**/node_modules": true },
+  "files.useExperimentalFileWatcher": true,
+  "git.autofetch": true,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
+  "gitlens.advanced.telemetry.enabled": false,
+  "gitlens.codeLens.authors.enabled": false,
+  "gitlens.codeLens.enabled": false,
+  "gitlens.codeLens.recentChange.enabled": false,
+  "gitlens.currentLine.enabled": false,
+  "jest.enableInlineErrorMessages": false,
   "jest.restartJestOnSnapshotUpdate": true,
   "markdown.preview.fontSize": 16,
-  "explorer.confirmDragAndDrop": false,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "git.autofetch": true,
-  "git.enableSmartCommit": true,
-  "explorer.confirmDelete": false,
-  "editor.minimap.renderCharacters": false,
-  "editor.tabSize": 2,
-  "window.zoomLevel": 0,
-  "files.useExperimentalFileWatcher": true,
-  "editor.lineNumbers": "off",
-  "editor.cursorBlinking": "solid",
-  "editor.glyphMargin": false,
-  "vim.leader": ",",
-  "jest.enableInlineErrorMessages": false,
-  "workbench.statusBar.visible": true,
-  "workbench.activityBar.visible": false,
-  "vim.foldfix": true,
-  "editor.renderIndentGuides": false,
-  "editor.lineHeight": 20,
-  "terminal.integrated.fontSize": 16,
+  "php.suggest.basic": false,
   "search.exclude": {
     "**/*.js.snap": true,
     "**/*.ts.snap": true,
     "**/yaml.lock": true
   },
-  "editor.parameterHints.enabled": false,
-  "editor.tabCompletion": "on",
-  "editor.suggest.localityBonus": true,
-  "editor.tokenColorCustomizations": {
-    "[Nord]": {
-      "comments": "#616e88"
-    }
-  },
-  "files.exclude": {
-    "**/.next": true,
-    "**/node_modules": true
-  },
-  "gitlens.codeLens.authors.enabled": false,
-  "gitlens.codeLens.scopes": ["document"],
-  "editor.minimap.enabled": false,
-  "editor.renderWhitespace": "none",
-  "breadcrumbs.enabled": true,
-  "tslint.alwaysShowStatus": true,
-  "tslint.autoFixOnSave": true,
-  "workbench.editor.highlightModifiedTabs": true,
-  "editor.acceptSuggestionOnCommitCharacter": false,
-  "editor.acceptSuggestionOnEnter": "smart",
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
-  "php.suggest.basic": false,
-  "workbench.colorTheme": "Default High Contrast",
-  "git.confirmSync": false,
-  "editor.formatOnSave": true
+  "terminal.external.osxExec": "iTerm.app",
+  "terminal.integrated.fontSize": 16,
+  "tslint.alwaysShowStatus": true,
+  "tslint.autoFixOnSave": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "vim.foldfix": true,
+  "vim.leader": ",",
+  "window.zoomLevel": 0,
+  "workbench.colorCustomizations": {
+    "activityBarBadge.background": "#FF7042",
+    "list.activeSelectionForeground": "#FF7042",
+    "list.inactiveSelectionForeground": "#FF7042",
+    "list.highlightForeground": "#FF7042",
+    "scrollbarSlider.activeBackground": "#FF704250",
+    "editorSuggestWidget.highlightForeground": "#FF7042",
+    "textLink.foreground": "#FF7042",
+    "progressBar.background": "#FF7042",
+    "pickerGroup.foreground": "#FF7042",
+    "tab.activeBorder": "#FF7042",
+    "notificationLink.foreground": "#FF7042",
+    "editorWidget.resizeBorder": "#FF7042",
+    "editorWidget.border": "#FF7042",
+    "settings.modifiedItemIndicator": "#FF7042",
+    "settings.headerForeground": "#FF7042",
+    "panelTitle.activeBorder": "#FF7042",
+    "breadcrumb.activeSelectionForeground": "#FF7042",
+    "menu.selectionForeground": "#FF7042",
+    "menubar.selectionForeground": "#FF7042"
+  },
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.statusBar.visible": true,
+  "workbench.activityBar.visible": false,
+  "workbench.colorTheme": "Material Theme Darker High Contrast",
+  "materialTheme.accent": "Orange",
+  "workbench.iconTheme": "material-icon-theme",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
