--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -26,7 +26,11 @@
   "editor.tokenColorCustomizations": { "[Nord]": { "comments": "#616e88" } },
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
-  "files.exclude": { "**/.next": true, "**/node_modules": true },
+  "files.exclude": {
+    "**/.next": true,
+    "**/node_modules": true,
+    "**/yarn.lock": true
+  },
   "files.useExperimentalFileWatcher": true,
   "git.autofetch": true,
   "git.confirmSync": false,
@@ -56,33 +60,36 @@
   "vim.leader": ",",
   "window.zoomLevel": 0,
   "workbench.colorCustomizations": {
-    "activityBarBadge.background": "#FF7042",
-    "list.activeSelectionForeground": "#FF7042",
-    "list.inactiveSelectionForeground": "#FF7042",
-    "list.highlightForeground": "#FF7042",
-    "scrollbarSlider.activeBackground": "#FF704250",
-    "editorSuggestWidget.highlightForeground": "#FF7042",
-    "textLink.foreground": "#FF7042",
-    "progressBar.background": "#FF7042",
-    "pickerGroup.foreground": "#FF7042",
-    "tab.activeBorder": "#FF7042",
-    "notificationLink.foreground": "#FF7042",
-    "editorWidget.resizeBorder": "#FF7042",
-    "editorWidget.border": "#FF7042",
-    "settings.modifiedItemIndicator": "#FF7042",
-    "settings.headerForeground": "#FF7042",
-    "panelTitle.activeBorder": "#FF7042",
-    "breadcrumb.activeSelectionForeground": "#FF7042",
-    "menu.selectionForeground": "#FF7042",
-    "menubar.selectionForeground": "#FF7042"
+    "activityBarBadge.background": "#00BCD4",
+    "list.activeSelectionForeground": "#00BCD4",
+    "list.inactiveSelectionForeground": "#00BCD4",
+    "list.highlightForeground": "#00BCD4",
+    "scrollbarSlider.activeBackground": "#00BCD450",
+    "editorSuggestWidget.highlightForeground": "#00BCD4",
+    "textLink.foreground": "#00BCD4",
+    "progressBar.background": "#00BCD4",
+    "pickerGroup.foreground": "#00BCD4",
+    "tab.activeBorder": "#00BCD4",
+    "notificationLink.foreground": "#00BCD4",
+    "editorWidget.resizeBorder": "#00BCD4",
+    "editorWidget.border": "#00BCD4",
+    "settings.modifiedItemIndicator": "#00BCD4",
+    "settings.headerForeground": "#00BCD4",
+    "panelTitle.activeBorder": "#00BCD4",
+    "breadcrumb.activeSelectionForeground": "#00BCD4",
+    "menu.selectionForeground": "#00BCD4",
+    "menubar.selectionForeground": "#00BCD4"
   },
   "workbench.editor.highlightModifiedTabs": true,
   "workbench.statusBar.visible": true,
   "workbench.activityBar.visible": false,
   "workbench.colorTheme": "Material Theme Darker High Contrast",
-  "materialTheme.accent": "Orange",
+  "materialTheme.accent": "Cyan",
   "workbench.iconTheme": "material-icon-theme",
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "editor.gotoLocation.multiple": "goto",
+  "references.preferredLocation": "view",
+  "emmet.showExpandedAbbreviation": "never"
 }
