--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,8 @@ set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
 set -g window-status-activity-fg colour233 # a bug in tmux
 set -g window-status-separator ""
 set -g status-justify centre
+set -g status-left-length 20
+set -g status-right 20
 set -g pane-border-bg default
 set -g pane-border-fg colour238
 set -g pane-active-border-bg default
