--- a/.docker/config.json
+++ b/.docker/config.json
@@ -1,5 +1,11 @@
 {
-  "detachKeys" : "ctrl-e,e",
-  "stackOrchestrator" : "swarm"
+	"auths": {
+		"https://index.docker.io/v1/": {}
+	},
+	"HttpHeaders": {
+		"User-Agent": "Docker-Client/19.03.1 (darwin)"
+	},
+	"detachKeys": "ctrl-e,e",
+	"credsStore": "desktop",
+	"stackOrchestrator": "swarm"
 }
-
