--- a/.vscode-mac.settings.json
+++ b/.vscode-mac.settings.json
@@ -138,5 +138,8 @@
   "extensions.ignoreRecommendations": true,
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
