Nord theme by default please

--- a/.vscode-mac.settings.json
+++ b/.vscode-mac.settings.json
@@ -108,7 +108,7 @@
   "workbench.editor.highlightModifiedTabs": true,
   "workbench.statusBar.visible": true,
   "workbench.activityBar.visible": false,
-  "workbench.colorTheme": "Material Theme Darker High Contrast",
+  "workbench.colorTheme": "Nord",
   "materialTheme.accent": "Cyan",
   "workbench.iconTheme": "material-icon-theme",
   "[javascript]": {
