Add dotfiles to VS Code container settings

--- a/.vscode-mac.settings.json
+++ b/.vscode-mac.settings.json
@@ -57,7 +57,7 @@
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "terminal.external.osxExec": "iTerm.app",
-  "terminal.integrated.fontSize": 16,
+  "terminal.integrated.fontSize": 14,
   "tslint.alwaysShowStatus": true,
   "tslint.autoFixOnSave": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
@@ -169,5 +169,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "editor.renderLineHighlight": "none",
-  "workbench.fontAliasing": "auto"
+  "workbench.fontAliasing": "auto",
+  "remote.containers.dotfiles.installCommand": "~/.dotfiles/install.zsh",
+  "remote.containers.dotfiles.repository": "https://github.com/statico/dotfiles",
+  "remote.containers.dotfiles.targetPath": "~/.dotfiles"
 }
